# memory-mission

./: .gitignore  BUILD_LOG.md  Makefile  README.md  deploy.sh  individual_with_mempalace.py  pyproject.toml
deploy/: .env.example  README.md  individual_with_mempalace.py
deploy/cron/: README.md  install-cron.sh  mm-refresh.sh
deploy/scripts/: _config.py  _crm_target.py  _kg_projection.py  _target_hubspot.py  _target_notion.py  backfill.py  backfill_granola.py  composio_live.py  cost_benchmark.py  extract_full.py  extract_pilot.py  extract_sample.py  mempalace_ingest.py  migrate_kg_firm_to_personal.py  promote_staged.py  push_to_crm.py  visualize_kg.py  write_personal.py
docs/: ABSTRACTIONS.md  ACTION_MEMORY.md  AGENTS.md  ARCHITECTURE.md  EVALS.md  OPERATING_STATE.md  VISION.md
docs/adr/: 0001-bayesian-corroboration.md  0002-two-plane-split.md  0003-mcp-as-agent-surface.md  0004-personal-layer-substrate-decision.md  0005-sqlite-per-firm.md  0007-capability-based-connectors.md  0011-chat-system-role.md  0012-context-farming-surface.md  0013-personal-plane-temporal-kg.md  0015-individual-brain-mode.md  0016-personal-observation-layer.md  README.md
docs/recipes/: hermes-connect.md  mcp-integration.md  personal-hot-cache.md  systems-yaml.md  vault-dashboard.md
overlays/: README.md
overlays/venture/: constitution_seed.md  firm_template.yaml  permissions_preset.md  prompt_examples.md
protocols/: permissions.md.template
scripts/: check_release_version.py
skills/: _index.md  _manifest.jsonl  _writing-skills.md
skills/backfill-affinity/: SKILL.md
tests/: conftest.py  test_coherence.py  test_connectors.py  test_coverage.py  test_durable.py  test_envelopes.py  test_eval_captures.py  test_eval_replay.py  test_extraction.py  test_extraction_dry_run.py  test_federated.py  test_hermes_provider.py  test_hermes_seed_migrate.py  test_identity.py  test_individual_boot.py  test_individual_server.py  test_knowledge_graph.py  test_mcp_server.py  test_memory.py  test_mentions.py  test_middleware.py  test_observability.py  test_observation_spike.py  test_overlay_contract.py  test_permissions.py  test_personal_backend_contract.py  test_personal_brain.py  test_personal_kg.py  test_personal_observations.py  test_personal_tasks.py  test_promotion.py  test_provider_contract.py  test_release_version_check.py  test_salience.py  test_scaffold.py  test_search.py  test_skills_registry.py  test_staging.py  test_staging_envelope.py  test_synthesis.py  (+5 more)
(+136 files in other folders)
