[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-mission"
version = "0.1.0"
description = "Enterprise AI knowledge infrastructure for wealth management firms"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Sven Wellmann" }]
license = { text = "Proprietary" }

dependencies = [
    # Core framework
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "structlog>=24.4",
    # Markdown + frontmatter (needed for any wiki page work)
    "python-frontmatter>=1.1",
    "markdown-it-py>=3.0",
    # LLM providers (used by extraction + workflow agents)
    "anthropic>=0.39",
    "openai>=1.54",
]

[project.optional-dependencies]
# Database + retrieval (added when we build components 0.1 / 0.2)
db = [
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
]

# MemPalace for importable temporal knowledge graph (component 0.2)
memory = [
    "mempalace>=3.2",
]

# External integrations (component 1.3)
integrations = [
    "composio>=0.7",
    "google-api-python-client>=2.150",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
]

# Hermes Agent runtime adapter (Layer 5).
# Hermes Agent isn't published to PyPI under a stable name yet — install from
# source when we wire the runtime adapter (Step 5+). Leaving this extra empty
# keeps `pip install -e '.[runtime]'` working once we pin a git URL or wheel.
runtime = []

# Dev tooling
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
memory-mission = "memory_mission.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_mission"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# Mypy overrides for third-party packages without type stubs will be added
# back when we actually import those modules (Step 5+: composio; Step 6+:
# mempalace; Layer 5: hermes_agent). Keeping the list lean today avoids
# mypy's "unused section" warning.

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
